# evidencememo

./: .gitignore  LICENSE  README.md  architecture_diagram.md  pyproject.toml
.github/workflows/: ci.yml
skills/sift-forensics/: SKILL.md
src/evidencememo/: __init__.py  autopsy_wrapper.py  cli.py  investigator.py  memo.py  volatility.py
tests/: test_memo.py
